feat: use optimistic updates on message sending, show sender name on message groups
