# packages/api/src/controllers/message.socket.ts
@@ -1,17 +1,9 @@
-import * as SocketIO from "socket.io";
-import type { EventHandlersMap } from "./types/socket-events";
-import { type Server } from "node:http";
-import { CORS_ALLOW } from "./config";
-import * as AuthToken from "./models/auth-token";
-import * as Message from "./models/message";
+import * as AuthToken from "../models/auth-token";
+import * as Message from "../models/message";
+import * as User from "../models/user";
+import type { SocketController } from "../types/controllers.socket";
 
-export const createSocketServer = (server: Server): void => {
-  const socketServer = new SocketIO.Server<EventHandlersMap>(server, {
-    cors: {
-      origin: CORS_ALLOW,
-    },
-  });
-
+export const chatMessage: SocketController = (socketServer) => {
   socketServer.on("connection", (socket) => {
     console.log("Socket server connected");
 
@@ -19,19 +11,24 @@ export const createSocketServer = (server: Server): void => {
       console.log("Socket server message", data);
 
       if (data.type === "client-request") {
-        const userId = await AuthToken.getUserId(data.authToken);
+        const userId = await AuthToken.getUserId(data.payload.authToken);
 
         // TODO: Emit error with socket
         if (!userId) throw new Error("User ID not found");
 
+        const user = await User.getById(userId);
+
+        if (!user) throw new Error("User info not found");
+
         const message = await Message.create({
           senderId: userId,
-          content: data.content,
+          senderName: user.username,
+          content: data.payload.content,
         });
 
         socketServer.emit("chat-message", {
           type: "server-response",
-          ...message,
+          payload: message,
         });
       }
 
